clusters/my-cluster/flux-system/kubernetes-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: local-ingress.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific  
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
