clusters/my-cluster/flux-system/ww-gitops.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-gitops-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: local-ingress.com
    http:
      paths:
      - path: /ww-gitops
        pathType: ImplementationSpecific  
        backend:
          service:
            name: ww-gitops-weave-gitops
            port: 
              number: 9001
